--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
         <title>Calculator</title>
         <script src="scrits.js" type ="text/scripts"></script>
     </head>
+    <body>
+        <h1>Kindly check my calculator.</h1>
+    </body>
 </html>
